fix: solve layout bugs

--- a/stylesheets/question.css
+++ b/stylesheets/question.css
@@ -43,7 +43,26 @@
 
 
 /* ====== 顶部查看全部回答 ====== */
-.Question-main>.Question-mainColumn>.Card:first-child {
+.Question-mainColumn {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: column nowrap;
+	flex-flow: column nowrap
+}
+
+.Question-mainColumn>.Card.MoreAnswers {
+	margin-bottom: 0;
+	-webkit-order: 2;
+	order: 2
+}
+
+.Question-mainColumn>.Card.ViewAll:last-child {
+	margin-bottom: 10px;
+	-webkit-order: 1;
+	order: 1
+}
+
+.Question-main .Question-mainColumn>.Card:first-child {
 	display: none
 }
 /* ====== 顶部查看全部回答 ====== */
